--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,11 +36,11 @@ nav{
   border-radius: 10px 10px 0 0;
   position: sticky;
   top: 0;
-  height: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding: min(3vw, 50px) 9vw;
 
   .logo {
     font-size: 32px;
@@ -51,7 +51,7 @@ nav{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 2rem;
+    gap: 2vw;
     ul {
       list-style: none;
       display: flex;
